2010-01-06  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelFactory_1Test.cs : ignore another couple of blocking tests.

2009-12-14  Atsushi Enomoto  <atsushi@ximian.com>

	* WSHttpBindingTest.cs : leave non-working test to get fixed later.

2009-12-03  Atsushi Enomoto  <atsushi@ximian.com>

	* BasicHttpBindingTest.cs : added transport security related tests.

2009-12-02  Atsushi Enomoto  <atsushi@ximian.com>

	* NetTcpBindingTest.cs :
	  I have to disable a lot of connective tests that somehow blocks
	  test runs. No idea why it started to happen though.

2009-10-15  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceHostBaseTest.cs : add test for checking non-mex contract
	  existence.

2009-10-07  Sebastien Pouliot  <sebastien@ximian.com>

	* OperationContextTest.cs: Add test case for OperationContext.Current

2009-09-04  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceHostBaseTest.cs : a few more base address test.
	  Remove NotWorking marks.

2009-09-04  Atsushi Enomoto  <atsushi@ximian.com>

	* ServiceHostBaseTest.cs : added test for AddBaseAddress().

2009-08-20  Atsushi Enomoto  <atsushi@ximian.com>

	* OperationContextTest.cs : new.

2009-07-14  Atsushi Enomoto  <atsushi@ximian.com>

	* CallbackBehaviorAttributeTest.cs : new test.

2009-07-08  Atsushi Enomoto  <atsushi@ximian.com>

	* NetTcpBindingTest.cs : added simple connection test. It somehow
	  stops for a while (without failing) though...

2009-07-08  Atsushi Enomoto  <atsushi@ximian.com>

	* NetPeerTcpBindingTest.cs : a bit of interface implementation test.

2009-07-07  Atsushi Enomoto  <atsushi@ximian.com>

	* EndpointAddress10Test.cs : added a few more serialization tests.

2009-07-07  Atsushi Enomoto  <atsushi@ximian.com>

	* PeerNodeAddressTest.cs : new test.

2009-04-21  Atsushi Enomoto  <atsushi@ximian.com>

	* NetPeerTcpBindingTest.cs : fix build.

2009-04-20  Atsushi Enomoto  <atsushi@ximian.com>

	* NetPeerTcpBindingTest.cs : new test.

2009-04-08  Atsushi Enomoto  <atsushi@ximian.com>
