@@ -1,5 +1,10 @@
 2010-01-06  Atsushi Enomoto  <atsushi@ximian.com>
 
+	* NetTcpBindingTest.cs : enable some tests and added streamed mode
+	  test. Commented on these changes.
+
+2010-01-06  Atsushi Enomoto  <atsushi@ximian.com>
+
 	* ChannelFactory_1Test.cs : ignore another couple of blocking tests.
 
 2009-12-14  Atsushi Enomoto  <atsushi@ximian.com>
